--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-08-26 Mon 20:25 -->
+<!-- 2024-08-26 Mon 20:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Mayer Goldberg's Homepage (&#x202e;מֵאִיר גּוֹלְדְּבֵּרְג&#x202c;)</title>
@@ -235,12 +235,12 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org688d5c7">1. Contact Information</a></li>
-<li><a href="#org8c59c8e">2. Research</a></li>
-<li><a href="#org3284b6e">3. Teaching</a></li>
-<li><a href="#org612c09a">4. Departmental duties</a></li>
-<li><a href="#org4265878">5. Personal interests</a></li>
-<li><a href="#orgf6a4dea">6. <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></a></li>
+<li><a href="#org3ea9150">1. Contact Information</a></li>
+<li><a href="#org8cc3e36">2. Research</a></li>
+<li><a href="#orgf99dc45">3. Teaching</a></li>
+<li><a href="#orgf20837a">4. Departmental duties</a></li>
+<li><a href="#org3f10626">5. Personal interests</a></li>
+<li><a href="#org2868521">6. <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></a></li>
 </ul>
 </div>
 </div>
@@ -257,14 +257,14 @@ regardless of whether or not it made money for anybody?
 </p>
 </blockquote>
 
-<div id="outline-container-org688d5c7" class="outline-2">
-<h2 id="org688d5c7"><span class="section-number-2">1</span> Contact Information</h2>
+<div id="outline-container-org3ea9150" class="outline-2">
+<h2 id="org3ea9150"><span class="section-number-2">1</span> Contact Information</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><b>Email:</b> <a href="mailto:gmayer@little-lisper.org">gmayer@little-lisper.org</a>. All email, from all other accounts,
 gets forwarded to this account.</li>
 <li><b>Office:</b> Building 37 (Alon, &#x202e;אלון&#x202c;) room 106, mailbox 44</li>
-<li><b>Office hours</b> (for the <b>Summer Semester, 2024</b>, currently <b>only</b> on <a href="https://us02web.zoom.us/j/87582638669?pwd=SVFVOFdvYlQ0enkyZ0s5NEM0ODNYQT09">Zoom/</a> only:
+<li><b>Office hours</b> (for the <b>Summer Semester, 2024</b>, currently <b>only</b> on <a href="https://us02web.zoom.us/j/87582638669?pwd=SVFVOFdvYlQ0enkyZ0s5NEM0ODNYQT09">Zoom</a> only:
 <ul class="org-ul">
 <li>For the <a href="./tc.html"><i>Teaching Committee</i> (&#x202e;ועדת הוראה, שנים ב–ד&#x202c;)</a>: Mondays, 13-15</li>
 </ul></li>
@@ -276,12 +276,12 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-org8c59c8e" class="outline-2">
-<h2 id="org8c59c8e"><span class="section-number-2">2</span> Research</h2>
+<div id="outline-container-org8cc3e36" class="outline-2">
+<h2 id="org8cc3e36"><span class="section-number-2">2</span> Research</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org54ed99c" class="outline-3">
-<h3 id="org54ed99c"><span class="section-number-3">2.1</span> Research Interests</h3>
+<div id="outline-container-org0a97862" class="outline-3">
+<h3 id="org0a97862"><span class="section-number-3">2.1</span> Research Interests</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li>The Lambda Calculus &amp; Combinatory Logic</li>
@@ -300,8 +300,8 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-org3284b6e" class="outline-2">
-<h2 id="org3284b6e"><span class="section-number-2">3</span> Teaching</h2>
+<div id="outline-container-orgf99dc45" class="outline-2">
+<h2 id="orgf99dc45"><span class="section-number-2">3</span> Teaching</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><i>Introduction to Compiler Construction</i>, Fall 2023</li>
@@ -310,16 +310,16 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-org612c09a" class="outline-2">
-<h2 id="org612c09a"><span class="section-number-2">4</span> Departmental duties</h2>
+<div id="outline-container-orgf20837a" class="outline-2">
+<h2 id="orgf20837a"><span class="section-number-2">4</span> Departmental duties</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="./tc.html"><i>The Unergraduate Teaching Committee</i></a> for years 2&#x2013;4 (&#x202e;ועדת הוראה, שנים ב–ד&#x202c;)</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org4265878" class="outline-2">
-<h2 id="org4265878"><span class="section-number-2">5</span> Personal interests</h2>
+<div id="outline-container-org3f10626" class="outline-2">
+<h2 id="org3f10626"><span class="section-number-2">5</span> Personal interests</h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="./languages.html">Learning languages</a></li>
@@ -328,8 +328,8 @@ Israel.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgf6a4dea" class="outline-2">
-<h2 id="orgf6a4dea"><span class="section-number-2">6</span> <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></h2>
+<div id="outline-container-org2868521" class="outline-2">
+<h2 id="org2868521"><span class="section-number-2">6</span> <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></h2>
 <div class="outline-text-2" id="text-6">
 <ul class="org-ul">
 <li>While the look <i>is</i> drab, mainly because I know very little about graphical design</li>
@@ -346,7 +346,7 @@ So please give the website a second look&#x2026; &#9786;
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (&#x202e;מֵאִיר גּוֹלְדְּבֵּרְג&#x202c;)</p>
-<p class="date">Created: 2024-08-26 Mon 20:25</p>
+<p class="date">Created: 2024-08-26 Mon 20:28</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
