--- a/arabic/arabic.html
+++ b/arabic/arabic.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-08-26 Mon 20:31 -->
+<!-- 2024-08-26 Mon 21:02 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span class='hebrew'>לימוד ערבית</span></title>
@@ -241,21 +241,21 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org04edbd6">1. משאבים</a></li>
-<li><a href="#orgfbc1d9e">2. הכתב הערבי</a></li>
-<li><a href="#org22dda05">3. ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></a></li>
-<li><a href="#org9ed7417">4. ערבית ספרותית, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></a></li>
+<li><a href="#org64f1e88">1. משאבים</a></li>
+<li><a href="#orgd229442">2. הכתב הערבי</a></li>
+<li><a href="#org08c6382">3. ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></a></li>
+<li><a href="#org836ea4f">4. ערבית ספרותית, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></a></li>
 </ul>
 </div>
 </div>
 <script src="https://mayer-goldberg.github.io/website/hebrew-support/gmayer-org-mode-web.js"></script>
 
-<div id="outline-container-org04edbd6" class="outline-2">
-<h2 id="org04edbd6"><span class="section-number-2">1</span> משאבים</h2>
+<div id="outline-container-org64f1e88" class="outline-2">
+<h2 id="org64f1e88"><span class="section-number-2">1</span> משאבים</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgbbfc069" class="outline-3">
-<h3 id="orgbbfc069"><span class="section-number-3">1.1</span> ספרים</h3>
+<div id="outline-container-org98952c1" class="outline-3">
+<h3 id="org98952c1"><span class="section-number-3">1.1</span> ספרים</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>הספרים של יוחנן אליחי
@@ -283,8 +283,8 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org9016b4d" class="outline-3">
-<h3 id="org9016b4d"><span class="section-number-3">1.2</span> מלונים מקוונים</h3>
+<div id="outline-container-org2acdccc" class="outline-3">
+<h3 id="org2acdccc"><span class="section-number-3">1.2</span> מלונים מקוונים</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="https://milon.madrasafree.com/">המלון המקוון של <b>מדרסה</b> לערבית מדוברת</a>. המלון פותח, מומש, ותוחזק על ידי <a href="https://rothfarb.info/"><b>רונן רוטפרב</b></a>. לאחר שנים שבהן ניהל את הפרוייקט לבדו, רונן העביר את הפרוייקט <a href="https://madrasafree.com/">לבית הספר <b>מדרסה</b> לערבית</a>, ואלו מתחזקים אותו כעת.</li>
@@ -292,39 +292,54 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-orgdc61358" class="outline-3">
-<h3 id="orgdc61358"><span class="section-number-3">1.3</span> תרגומים אינטרלינאריים</h3>
+<div id="outline-container-org1933ad7" class="outline-3">
+<h3 id="org1933ad7"><span class="section-number-3">1.3</span> תרגומים אינטרלינאריים</h3>
 </div>
 </div>
-<div id="outline-container-orgfbc1d9e" class="outline-2">
-<h2 id="orgfbc1d9e"><span class="section-number-2">2</span> הכתב הערבי</h2>
+<div id="outline-container-orgd229442" class="outline-2">
+<h2 id="orgd229442"><span class="section-number-2">2</span> הכתב הערבי</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org2b96522" class="outline-3">
-<h3 id="org2b96522"><span class="section-number-3">2.1</span> הסדר המלוני</h3>
+<div id="outline-container-org583f3d1" class="outline-3">
+<h3 id="org583f3d1"><span class="section-number-3">2.1</span> הסדר המלוני</h3>
 </div>
-<div id="outline-container-orgb2780c4" class="outline-3">
-<h3 id="orgb2780c4"><span class="section-number-3">2.2</span> הקלדה עיוורת</h3>
+<div id="outline-container-orga1574a3" class="outline-3">
+<h3 id="orga1574a3"><span class="section-number-3">2.2</span> הקלדה עיוורת</h3>
 </div>
-<div id="outline-container-org80c3a38" class="outline-3">
-<h3 id="org80c3a38"><span class="section-number-3">2.3</span> כתיבה תמה</h3>
+<div id="outline-container-orgbc21a62" class="outline-3">
+<h3 id="orgbc21a62"><span class="section-number-3">2.3</span> כתיבה תמה</h3>
 </div>
 </div>
-<div id="outline-container-org22dda05" class="outline-2">
-<h2 id="org22dda05"><span class="section-number-2">3</span> ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></h2>
+<div id="outline-container-org08c6382" class="outline-2">
+<h2 id="org08c6382"><span class="section-number-2">3</span> ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 ערבית מדוברת של המזרח הקרוב היא אוסף של להגים המדוברים באיזור שהיסטורית נקרא בשם <b>סוריה הגדולה</b>, או שָׁאם (<span class='naskh'>شام</span>). האיזור כולל את לבנון, סוריה, ירדן, ישראל, הגדה המערבית, ורצועת עזה. מבחינה היסטורית, <b>סוריה הגדולה</b> כוללת גם את עיראק, אבל ערבית מדוברת עיראקית שונה מאד משאר הלהגים של <b>סוריה הגדולה</b>, וכולל השפעות רבות מפרסית ותורכית, ולכן מקובל שלא לכלול אותו בלהגים של <b>סוריה הגדולה</b>, אלא להתייחס אליו כלהג נפרד.
 </p>
 </div>
 
-<div id="outline-container-org357309b" class="outline-3">
-<h3 id="org357309b"><span class="section-number-3">3.1</span> Timeline</h3>
+<div id="outline-container-org41f12a7" class="outline-3">
+<h3 id="org41f12a7"><span class="section-number-3">3.1</span> Timeline</h3>
 <div class="outline-text-3" id="text-3-1">
 </div>
 <ol class="org-ol">
-<li><a id="org5230d0d"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-27 Wed&gt;</span></span><br />
+<li><a id="org23f1252"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2024-08-26 Mon&gt;</span></span><br />
 <div class="outline-text-4" id="text-3-1-1">
+<p>
+איך קונים ספרים בערבית? 
+</p>
+
+<ul class="org-ul">
+<li>בחנויות מסויימות של סטימצקי וצומת ספרים ניתן למצוא כמה מדפי ספרים בערבית… אבל מי שמגיע עם רשימות מוכנות צריך מקורות טובים יותר.</li>
+<li>יש חנויות ספרים בישובים מעורבים או ערביים (חיפה, נצרת, אום אלפאחם, וכו').</li>
+<li>יש חנויות ספרים מקוונות שמתמחות בספרים מכל העולם הערבי. יכול להיות מסובך לעבוד איתן, משום שרבות מהן לא תשלחנה ספרים ארצה. יש חברות ישראליות שנותנות לכם כתובת בארה"ב או באירופה, ואתם יכולים לרכוש ספרים ולשלוח אותם לכתובת שנתנו לכם… משם כבר תשלמו לחברה ישראלית להביא את הספרים ארצה. היתה לי חוויה קשה עם חברה כזו: ספרים מסוריה ומלבנון, שלקח להם חודש להגיע לארה"ב, לקח לחברה ישראלית שלושה וחצי חודשים (!) להביא ארצה, וזה בזמן שישראל מפציצה לעיתים תכופות את שדה התעופה של דמשק, ומשבשת את הקליטה של לווייני ה־GPS במזרח התיכון, על מנת שבמקום שכל הדרכים תובלנה לרומא, הן תובלנה, לפחות באפליקציות הניווט, לנמל התעופה על־שם רפיק אל־חרירי בביירות… הזמן והעלויות של חבילות ספרים באופן הזה לא הופכות את האופציה לאטרקטיבית.</li>
+<li>חנויות בגדה (חברון, שכם, וכו'). אם יש לכם חברים ערבים שנוסעים לערים בגדה, אפשר לבקש שיביאו לכם. הם מביאים המוני ספרים מכל העולם הערבי, דרך ירדן. מחירי הספרים זולים מאד.</li>
+</ul>
+</div>
+</li>
+
+<li><a id="orgcbfdefb"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-27 Wed&gt;</span></span><br />
+<div class="outline-text-4" id="text-3-1-2">
 <p>
 כדי להבין את האמרה הלבנונית הבאה, צריך לעשות סדר במונחים של קבוצות דתיות שונות:
 </p>
@@ -352,16 +367,16 @@ for the JavaScript code in this tag.
 </div>
 </li>
 
-<li><a id="orgaa6f4ed"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-25 Mon&gt;</span></span><br />
-<div class="outline-text-4" id="text-3-1-2">
+<li><a id="orgff91d7c"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-25 Mon&gt;</span></span><br />
+<div class="outline-text-4" id="text-3-1-3">
 <p>
 שברתי את הראש מדוע המלה <span class='naskh'>حامل</span>, שפירושה "אשה בהריון" היא מלה זכרית ומקבלת שמות תואר בזכר. חיטטתי במלונים עד שקלטתי שזו גם המלה ל־"נשא", במובן של נשא של מחלה… ולכן כותבים <span class='naskh'>حامل جديد</span> ולא <span class='naskh'>حامل جديدة</span>…
 </p>
 </div>
 </li>
 
-<li><a id="org64bff54"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-23 Sat&gt;</span></span><br />
-<div class="outline-text-4" id="text-3-1-3">
+<li><a id="orge879646"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-23 Sat&gt;</span></span><br />
+<div class="outline-text-4" id="text-3-1-4">
 <p>
 ממשיך ללמוד כרטיסים. לא הוספתי חדשים, אבל שיניתי את אופן הלימוד שלי: כעת כל פעם ש־"הצד השני" של הכרטיס הוא בערבית, אני רושם את המלה באותיות ערביות ומשווה. זו עבודה רבה יותר אבל יש לה יתרונות חשובים:
 </p>
@@ -382,8 +397,8 @@ for the JavaScript code in this tag.
 </div>
 </li>
 
-<li><a id="orga0b8b5c"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-21 Thu&gt;</span></span><br />
-<div class="outline-text-4" id="text-3-1-4">
+<li><a id="org00c16ea"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-21 Thu&gt;</span></span><br />
+<div class="outline-text-4" id="text-3-1-5">
 <p>
 הכרטסת שלי כוללת 4261 כרטיסים. הוספתי 230+ כרטיסים מאז תחילת החודש. זה קצת מאכזב. קיוויתי שאוכל להוסיף מעל לאלף כרטיסים חדשים, ולא קרה. אני צריך להגביר את הקצב לפני תחילת הסמסטר.
 </p>
@@ -401,13 +416,13 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org9ed7417" class="outline-2">
-<h2 id="org9ed7417"><span class="section-number-2">4</span> ערבית ספרותית, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></h2>
+<div id="outline-container-org836ea4f" class="outline-2">
+<h2 id="org836ea4f"><span class="section-number-2">4</span> ערבית ספרותית, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></h2>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (<span class='hebrew'>מֵאִיר גּוֹלְדְּבֵּרְג</span>)</p>
-<p class="date">Created: 2024-08-26 Mon 20:31</p>
+<p class="date">Created: 2024-08-26 Mon 21:02</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
