--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-06-23 Mon 15:22 -->
+<!-- 2025-06-24 Tue 00:41 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Mayer Goldberg's Homepage (@@html:&amp;#x202e;@@מֵאִיר גּוֹלְדְּבֵּרְג@@html:&amp;#x202c;@@)</title>
@@ -202,16 +202,16 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org1aa7d23">1. Contact Information</a></li>
-<li><a href="#org17438ca">2. Research</a>
+<li><a href="#org1798e20">1. Contact Information</a></li>
+<li><a href="#orgcec570c">2. Research</a>
 <ul>
-<li><a href="#orgb63cc9f">2.1. Research Interests</a></li>
+<li><a href="#orgfaba008">2.1. Research Interests</a></li>
 </ul>
 </li>
-<li><a href="#org4a15040">3. Teaching</a></li>
-<li><a href="#org39a7a48">4. Departmental duties</a></li>
-<li><a href="#orgfc89724">5. Personal interests</a></li>
-<li><a href="#org415d474">6. <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></a></li>
+<li><a href="#orge7c9fd6">3. Teaching</a></li>
+<li><a href="#org63c0e45">4. Departmental duties</a></li>
+<li><a href="#orgc252b9d">5. Personal interests</a></li>
+<li><a href="#orgd57e94c">6. <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></a></li>
 </ul>
 </div>
 </div>
@@ -228,8 +228,8 @@ regardless of whether or not it made money for anybody?
 </p>
 </blockquote>
 
-<div id="outline-container-org1aa7d23" class="outline-2">
-<h2 id="org1aa7d23"><span class="section-number-2">1.</span> Contact Information</h2>
+<div id="outline-container-org1798e20" class="outline-2">
+<h2 id="org1798e20"><span class="section-number-2">1.</span> Contact Information</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><b>Email:</b> <a href="mailto:gmayer@little-lisper.org">gmayer@little-lisper.org</a>. All email, from all other accounts,
@@ -247,12 +247,12 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-org17438ca" class="outline-2">
-<h2 id="org17438ca"><span class="section-number-2">2.</span> Research</h2>
+<div id="outline-container-orgcec570c" class="outline-2">
+<h2 id="orgcec570c"><span class="section-number-2">2.</span> Research</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-orgb63cc9f" class="outline-3">
-<h3 id="orgb63cc9f"><span class="section-number-3">2.1.</span> Research Interests</h3>
+<div id="outline-container-orgfaba008" class="outline-3">
+<h3 id="orgfaba008"><span class="section-number-3">2.1.</span> Research Interests</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li>The Lambda Calculus &amp; Combinatory Logic</li>
@@ -271,26 +271,26 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-org4a15040" class="outline-2">
-<h2 id="org4a15040"><span class="section-number-2">3.</span> Teaching</h2>
+<div id="outline-container-orge7c9fd6" class="outline-2">
+<h2 id="orge7c9fd6"><span class="section-number-2">3.</span> Teaching</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
-<li><i>Introduction to Compiler Construction</i>, Fall 2023</li>
-<li><i>Introduction to the Lambda Calculus &amp; Combinatory Logic</i>, Spring 2024</li>
+<li><i>Introduction to Compiler Construction</i>, Fall 2024</li>
+<li><i>Introduction to the Lambda Calculus &amp; Combinatory Logic</i>, Spring 2025</li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org39a7a48" class="outline-2">
-<h2 id="org39a7a48"><span class="section-number-2">4.</span> Departmental duties</h2>
+<div id="outline-container-org63c0e45" class="outline-2">
+<h2 id="org63c0e45"><span class="section-number-2">4.</span> Departmental duties</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="./tc.html"><i>The Unergraduate Teaching Committee</i></a> for years 2&#x2013;4 (&#x202e;ועדת הוראה, שנים ב–ד&#x202c;)</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgfc89724" class="outline-2">
-<h2 id="orgfc89724"><span class="section-number-2">5.</span> Personal interests</h2>
+<div id="outline-container-orgc252b9d" class="outline-2">
+<h2 id="orgc252b9d"><span class="section-number-2">5.</span> Personal interests</h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="./languages.html">Learning languages</a></li>
@@ -299,14 +299,14 @@ Israel.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org415d474" class="outline-2">
-<h2 id="org415d474"><span class="section-number-2">6.</span> <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></h2>
+<div id="outline-container-orgd57e94c" class="outline-2">
+<h2 id="orgd57e94c"><span class="section-number-2">6.</span> <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></h2>
 <div class="outline-text-2" id="text-6">
 <ul class="org-ul">
 <li>While the look <i>is</i> drab, mainly because I know very little about graphical design</li>
 <li>The website is generated from org-mode in GNU Emacs</li>
 <li>Org-mode is powerful, and I've added support in GNU Emacs for typing in languages, so the combination of left-to-right language and &#x202e;שָׂפוֹת שֶׁנִּכְתָּבוֹת מִיָּמִין לִשְׂמֹאל, או كِتَابَتْهَا مِن الْيَمِين إلَى الْيَسَار&#x202c; is accomplished simply and accurately</li>
-<li>The website is currently (as of 2023) being updated rapidly, and more material is added weekly</li>
+<li>The website is currently (as of 2025) being updated rapidly, and more material is added weekly</li>
 </ul>
 
 <p>
@@ -317,7 +317,7 @@ So please give the website a second look&#x2026; &#9786;
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (&#x202e;מֵאִיר גּוֹלְדְּבֵּרְג&#x202c;)</p>
-<p class="date">Created: 2025-06-23 Mon 15:22</p>
+<p class="date">Created: 2025-06-24 Tue 00:41</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
