--- a/interlinear.html
+++ b/interlinear.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-09-27 Sat 12:04 -->
+<!-- 2025-09-27 Sat 12:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Interlinear Translations I Prepared</title>
@@ -202,30 +202,30 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orge1520d4">1. My interlinear translations</a>
+<li><a href="#orgf27e17d">1. My interlinear translations</a>
 <ul>
-<li><a href="#org83b60c7">1.1. Arabic</a></li>
-<li><a href="#org7eece94">1.2. Latin</a></li>
+<li><a href="#org4917490">1.1. Arabic</a></li>
+<li><a href="#org12599b8">1.2. Latin</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orge1520d4" class="outline-2">
-<h2 id="orge1520d4"><span class="section-number-2">1.</span> My interlinear translations</h2>
+<div id="outline-container-orgf27e17d" class="outline-2">
+<h2 id="orgf27e17d"><span class="section-number-2">1.</span> My interlinear translations</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org83b60c7" class="outline-3">
-<h3 id="org83b60c7"><span class="section-number-3">1.1.</span> Arabic</h3>
+<div id="outline-container-org4917490" class="outline-3">
+<h3 id="org4917490"><span class="section-number-3">1.1.</span> Arabic</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><a href="file:///home/gmayer/work/website/arabic-interlinear-translations/al-haiba-theme-song=majbour.pdf">Majbour</a>: The theme song from the Lebanese series Al Haiba</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org7eece94" class="outline-3">
-<h3 id="org7eece94"><span class="section-number-3">1.2.</span> Latin</h3>
+<div id="outline-container-org12599b8" class="outline-3">
+<h3 id="org12599b8"><span class="section-number-3">1.2.</span> Latin</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="./psalter.html">A quadrilingual Psalter</a></li>
@@ -236,7 +236,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (&#x202e;מֵאִיר גּוֹלְדְּבֵּרְג&#x202c;)</p>
-<p class="date">Created: 2025-09-27 Sat 12:04</p>
+<p class="date">Created: 2025-09-27 Sat 12:06</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
