--- a/interlinear.html
+++ b/interlinear.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-09-27 Sat 12:20 -->
+<!-- 2025-09-27 Sat 12:25 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Interlinear Translations I Prepared</title>
@@ -202,24 +202,25 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgbca8781">1. My interlinear translations</a>
+<li><a href="#org6ee3d69">1. My interlinear translations</a>
 <ul>
-<li><a href="#org2e03c1b">1.1. Arabic</a></li>
-<li><a href="#org7cda1a6">1.2. Latin</a></li>
+<li><a href="#org75818c6">1.1. Arabic</a></li>
+<li><a href="#orge6a7551">1.2. Latin</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgbca8781" class="outline-2">
-<h2 id="orgbca8781"><span class="section-number-2">1.</span> My interlinear translations</h2>
+<div id="outline-container-org6ee3d69" class="outline-2">
+<h2 id="org6ee3d69"><span class="section-number-2">1.</span> My interlinear translations</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org2e03c1b" class="outline-3">
-<h3 id="org2e03c1b"><span class="section-number-3">1.1.</span> Arabic</h3>
+<div id="outline-container-org75818c6" class="outline-3">
+<h3 id="org75818c6"><span class="section-number-3">1.1.</span> Arabic</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
+<li><a href="./arabic-interlinear-translations/kalimat.pdf">Kalimat, by Nizar Tawfiq Qabbani</a></li>
 <li><a href="./arabic-interlinear-translations/apo-and-the-apostles-baji-wenek.pdf">Baji Wenek, by Apo and the Apostles</a></li>
 <li><a href="./arabic-interlinear-translations/apo-and-the-apostles-lina.pdf">Lina, by Apo and the Apostles</a></li>
 <li><a href="./arabic-interlinear-translations/mashrou-leila-rakset-leilah.pdf">Raksit Leila, by Mashrou Leila</a></li>
@@ -228,8 +229,8 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-org7cda1a6" class="outline-3">
-<h3 id="org7cda1a6"><span class="section-number-3">1.2.</span> Latin</h3>
+<div id="outline-container-orge6a7551" class="outline-3">
+<h3 id="orge6a7551"><span class="section-number-3">1.2.</span> Latin</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="./psalter.html">A quadrilingual Psalter</a></li>
@@ -240,7 +241,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (&#x202e;מֵאִיר גּוֹלְדְּבֵּרְג&#x202c;)</p>
-<p class="date">Created: 2025-09-27 Sat 12:20</p>
+<p class="date">Created: 2025-09-27 Sat 12:25</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
