--- a/interlinear.html
+++ b/interlinear.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-09-27 Sat 12:25 -->
+<!-- 2025-09-27 Sat 12:40 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Interlinear Translations I Prepared</title>
@@ -202,38 +202,51 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org6ee3d69">1. My interlinear translations</a>
+<li><a href="#org5ca2b87">1. My interlinear translations</a>
 <ul>
-<li><a href="#org75818c6">1.1. Arabic</a></li>
-<li><a href="#orge6a7551">1.2. Latin</a></li>
+<li><a href="#org8905a4b">1.1. Arabic</a></li>
+<li><a href="#org5efbf47">1.2. Latin</a></li>
+<li><a href="#orgdca3e1e">1.3. Miscellaneous Languages</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org6ee3d69" class="outline-2">
-<h2 id="org6ee3d69"><span class="section-number-2">1.</span> My interlinear translations</h2>
+<div id="outline-container-org5ca2b87" class="outline-2">
+<h2 id="org5ca2b87"><span class="section-number-2">1.</span> My interlinear translations</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org75818c6" class="outline-3">
-<h3 id="org75818c6"><span class="section-number-3">1.1.</span> Arabic</h3>
+<div id="outline-container-org8905a4b" class="outline-3">
+<h3 id="org8905a4b"><span class="section-number-3">1.1.</span> Arabic</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
-<li><a href="./arabic-interlinear-translations/kalimat.pdf">Kalimat, by Nizar Tawfiq Qabbani</a></li>
-<li><a href="./arabic-interlinear-translations/apo-and-the-apostles-baji-wenek.pdf">Baji Wenek, by Apo and the Apostles</a></li>
-<li><a href="./arabic-interlinear-translations/apo-and-the-apostles-lina.pdf">Lina, by Apo and the Apostles</a></li>
-<li><a href="./arabic-interlinear-translations/mashrou-leila-rakset-leilah.pdf">Raksit Leila, by Mashrou Leila</a></li>
-<li><a href="./arabic-interlinear-translations/mashrou-leila-fasateen.pdf">Fasateen, by Mashrou Leila</a></li>
-<li><a href="./arabic-interlinear-translations/al-haiba-theme-song=majbour.pdf">Majbour</a>: The theme song from the Lebanese series Al Haiba</li>
+<li><a href="./arabic-interlinear-translations/kalimat.pdf">Kalimat, by <i>Nizar Tawfiq Qabbani</i></a></li>
+<li><a href="./arabic-interlinear-translations/apo-and-the-apostles-baji-wenek.pdf">Baji Wenek, by <i>Apo and the Apostles</i></a></li>
+<li><a href="./arabic-interlinear-translations/apo-and-the-apostles-lina.pdf">Lina, by <i>Apo and the Apostles</i></a></li>
+<li><a href="./arabic-interlinear-translations/mashrou-leila-rakset-leilah.pdf">Raksit Leila, by <i>Mashrou Leila</i></a></li>
+<li><a href="./arabic-interlinear-translations/mashrou-leila-fasateen.pdf">Fasateen, by <i>Mashrou Leila</i></a></li>
+<li><a href="./arabic-interlinear-translations/al-haiba-theme-song=majbour.pdf">Majbour</a> (the theme song from the Lebanese series <i>Al Haiba</i>)</li>
+<li><a href="./arabic-interlinear-translations/al-ein.pdf">Al-Ein Mulayyiten</a></li>
+<li><a href="./arabic-interlinear-translations/kazem-alsaher-baghdad-la-tatalami.pdf">Baghdad La Tat'alami, by <i>Kazem al-Saher</i></a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orge6a7551" class="outline-3">
-<h3 id="orge6a7551"><span class="section-number-3">1.2.</span> Latin</h3>
+<div id="outline-container-org5efbf47" class="outline-3">
+<h3 id="org5efbf47"><span class="section-number-3">1.2.</span> Latin</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="./psalter.html">A quadrilingual Psalter</a></li>
+</ul>
+</div>
+</div>
+<div id="outline-container-orgdca3e1e" class="outline-3">
+<h3 id="orgdca3e1e"><span class="section-number-3">1.3.</span> Miscellaneous Languages</h3>
+<div class="outline-text-3" id="text-1-3">
+<ul class="org-ul">
+<li><a href="./misc-interlinear-translations/nashod.pdf">Nashod</a> (Farsi)</li>
+<li><a href="./misc-interlinear-translations/mundeke.pdf">Mundeke Mbere Noyo, by <i>Afrigo</i></a> (Luganda)</li>
+<li><a href="./misc-interlinear-translations/konpira-fune-fune.pdf">Konpira Fune Fune</a> (Japanese)</li>
 </ul>
 </div>
 </div>
@@ -241,7 +254,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (&#x202e;מֵאִיר גּוֹלְדְּבֵּרְג&#x202c;)</p>
-<p class="date">Created: 2025-09-27 Sat 12:25</p>
+<p class="date">Created: 2025-09-27 Sat 12:40</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
