--- a/interlinear.html
+++ b/interlinear.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-09-27 Sat 12:41 -->
+<!-- 2025-09-27 Sat 21:32 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Interlinear Translations I Prepared</title>
@@ -202,23 +202,22 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org0a33cac">1. My interlinear translations</a>
+<li><a href="#org305f182">1. My interlinear translations</a>
 <ul>
-<li><a href="#org0626bd4">1.1. Arabic</a></li>
-<li><a href="#org501ed24">1.2. Latin</a></li>
-<li><a href="#org07506e4">1.3. Miscellaneous Languages</a></li>
+<li><a href="#orgcccf7f3">1.1. Arabic</a></li>
+<li><a href="#org925a2ab">1.2. Miscellaneous Languages</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org0a33cac" class="outline-2">
-<h2 id="org0a33cac"><span class="section-number-2">1.</span> My interlinear translations</h2>
+<div id="outline-container-org305f182" class="outline-2">
+<h2 id="org305f182"><span class="section-number-2">1.</span> My interlinear translations</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org0626bd4" class="outline-3">
-<h3 id="org0626bd4"><span class="section-number-3">1.1.</span> Arabic</h3>
+<div id="outline-container-orgcccf7f3" class="outline-3">
+<h3 id="orgcccf7f3"><span class="section-number-3">1.1.</span> Arabic</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><a href="./arabic-interlinear-translations/kalimat.pdf">Kalimat, by <i>Nizar Tawfiq Qabbani</i></a></li>
@@ -232,18 +231,11 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-org501ed24" class="outline-3">
-<h3 id="org501ed24"><span class="section-number-3">1.2.</span> Latin</h3>
+<div id="outline-container-org925a2ab" class="outline-3">
+<h3 id="org925a2ab"><span class="section-number-3">1.2.</span> Miscellaneous Languages</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
-<li><a href="./psalter.html">A quadrilingual Psalter</a></li>
-</ul>
-</div>
-</div>
-<div id="outline-container-org07506e4" class="outline-3">
-<h3 id="org07506e4"><span class="section-number-3">1.3.</span> Miscellaneous Languages</h3>
-<div class="outline-text-3" id="text-1-3">
-<ul class="org-ul">
+<li><a href="./psalter.html">A quadrilingual Psalter</a> (Hebrew, English, Latin, Greek)</li>
 <li><a href="./misc-interlinear-translations/nashod.pdf">Nashod</a> (Farsi)</li>
 <li><a href="./misc-interlinear-translations/mundeke.pdf">Mundeke Mbere Noyo, by <i>Afrigo</i></a> (Luganda)</li>
 <li><a href="./misc-interlinear-translations/konpira-fune-fune.pdf">Konpira Fune Fune</a> (Japanese)</li>
@@ -255,7 +247,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (&#x202e;מֵאִיר גּוֹלְדְּבֵּרְג&#x202c;)</p>
-<p class="date">Created: 2025-09-27 Sat 12:41</p>
+<p class="date">Created: 2025-09-27 Sat 21:32</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
