--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-12 Tue 09:06 -->
+<!-- 2025-10-15 Wed 14:10 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Mayer Goldberg's Homepage (@@html:&amp;#x202e;@@מֵאִיר גּוֹלְדְּבֵּרְג@@html:&amp;#x202c;@@)</title>
@@ -202,16 +202,16 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgb27ea86">1. Contact Information</a></li>
-<li><a href="#orgff02d5a">2. Research</a>
+<li><a href="#org5720fb4">1. Contact Information</a></li>
+<li><a href="#orga4a0ca1">2. Research</a>
 <ul>
-<li><a href="#orgd495e96">2.1. Research Interests</a></li>
+<li><a href="#org33f73be">2.1. Research Interests</a></li>
 </ul>
 </li>
-<li><a href="#org5bc326d">3. Teaching</a></li>
-<li><a href="#org0882af3">4. Departmental duties</a></li>
-<li><a href="#org2f939e0">5. Personal interests</a></li>
-<li><a href="#orgb54e118">6. <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></a></li>
+<li><a href="#org7b015f0">3. Teaching</a></li>
+<li><a href="#orgd9a6dd1">4. Departmental duties</a></li>
+<li><a href="#org51c615e">5. Personal interests</a></li>
+<li><a href="#org0bf7fb2">6. <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></a></li>
 </ul>
 </div>
 </div>
@@ -228,16 +228,16 @@ regardless of whether or not it made money for anybody?
 </p>
 </blockquote>
 
-<div id="outline-container-orgb27ea86" class="outline-2">
-<h2 id="orgb27ea86"><span class="section-number-2">1.</span> Contact Information</h2>
+<div id="outline-container-org5720fb4" class="outline-2">
+<h2 id="org5720fb4"><span class="section-number-2">1.</span> Contact Information</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><b>Email:</b> <a href="mailto:gmayer@little-lisper.org">gmayer@little-lisper.org</a>. All email, from all other accounts,
 gets forwarded to this account.</li>
 <li><b>Office:</b> Building 37 (Alon, &#x202e;אלון&#x202c;) room 106, mailbox 44</li>
-<li><b>Office hours</b> (for the <b>Summer Semester, 2024</b>, currently <b>only</b> on <a href="https://us02web.zoom.us/j/87582638669?pwd=SVFVOFdvYlQ0enkyZ0s5NEM0ODNYQT09">Zoom</a> only:
+<li><b>Office hours</b> (for the <b>Fall Semester, 2025</b>, currently <b>only</b> on <a href="https://us02web.zoom.us/j/86309317409?pwd=jHoMQ3Ec3xE35eLLPF5tuagZl7Swsm.1">Zoom</a>:
 <ul class="org-ul">
-<li>For the <a href="./tc.html"><i>Teaching Committee</i> (&#x202e;ועדת הוראה, אחראי על שנה א'&#x202c;)</a>: Mondays, 13-15</li>
+<li>For the <a href="./tc.html"><i>Teaching Committee</i> (&#x202e;ועדת הוראה, אחראי על שנה א'&#x202c;)</a>: Mondays, 14-16</li>
 </ul></li>
 <li><b>Telephones:</b> Voice (+972)(0)8-647-7873, FAX (+972)(0)8-647-7650</li>
 <li><b>Professional mailing address:</b> <a href="mailto:gmayer@little-lisper.org">Mayer Goldberg</a>, <a href="http://www.cs.bgu.ac.il/">Department of Computer
@@ -247,12 +247,12 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-orgff02d5a" class="outline-2">
-<h2 id="orgff02d5a"><span class="section-number-2">2.</span> Research</h2>
+<div id="outline-container-orga4a0ca1" class="outline-2">
+<h2 id="orga4a0ca1"><span class="section-number-2">2.</span> Research</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-orgd495e96" class="outline-3">
-<h3 id="orgd495e96"><span class="section-number-3">2.1.</span> Research Interests</h3>
+<div id="outline-container-org33f73be" class="outline-3">
+<h3 id="org33f73be"><span class="section-number-3">2.1.</span> Research Interests</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li>The Lambda Calculus &amp; Combinatory Logic</li>
@@ -271,8 +271,8 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-org5bc326d" class="outline-2">
-<h2 id="org5bc326d"><span class="section-number-2">3.</span> Teaching</h2>
+<div id="outline-container-org7b015f0" class="outline-2">
+<h2 id="org7b015f0"><span class="section-number-2">3.</span> Teaching</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><i>Introduction to Compiler Construction</i>, Fall 2024</li>
@@ -281,16 +281,16 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-org0882af3" class="outline-2">
-<h2 id="org0882af3"><span class="section-number-2">4.</span> Departmental duties</h2>
+<div id="outline-container-orgd9a6dd1" class="outline-2">
+<h2 id="orgd9a6dd1"><span class="section-number-2">4.</span> Departmental duties</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="./tc.html"><i>The Unergraduate Teaching Committee</i></a> for years 2&#x2013;4 (&#x202e;ועדת הוראה, שנים ב–ד&#x202c;)</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org2f939e0" class="outline-2">
-<h2 id="org2f939e0"><span class="section-number-2">5.</span> Personal interests</h2>
+<div id="outline-container-org51c615e" class="outline-2">
+<h2 id="org51c615e"><span class="section-number-2">5.</span> Personal interests</h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="./languages.html">Learning languages</a></li>
@@ -299,8 +299,8 @@ Israel.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgb54e118" class="outline-2">
-<h2 id="orgb54e118"><span class="section-number-2">6.</span> <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></h2>
+<div id="outline-container-org0bf7fb2" class="outline-2">
+<h2 id="org0bf7fb2"><span class="section-number-2">6.</span> <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></h2>
 <div class="outline-text-2" id="text-6">
 <ul class="org-ul">
 <li>While the look <i>is</i> drab, mainly because I know very little about graphical design</li>
@@ -317,7 +317,7 @@ So please give the website a second look&#x2026; &#9786;
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (&#x202e;מֵאִיר גּוֹלְדְּבֵּרְג&#x202c;)</p>
-<p class="date">Created: 2025-08-12 Tue 09:06</p>
+<p class="date">Created: 2025-10-15 Wed 14:10</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
