--- a/tc.html
+++ b/tc.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-12 Tue 09:09 -->
+<!-- 2025-10-15 Wed 14:10 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Teaching Committee</title>
@@ -202,16 +202,16 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org2d0560f">1. Synopsis</a></li>
-<li><a href="#org3dea710">2. How to contact me</a></li>
-<li><a href="#org808376a">3. General guidelines</a></li>
-<li><a href="#org90ecf2a">4. Issues that come up frequently</a></li>
+<li><a href="#orgc00b2a1">1. Synopsis</a></li>
+<li><a href="#org4c1f143">2. How to contact me</a></li>
+<li><a href="#org8df6768">3. General guidelines</a></li>
+<li><a href="#orgcdf8f41">4. Issues that come up frequently</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org2d0560f" class="outline-2">
-<h2 id="org2d0560f"><span class="section-number-2">1.</span> Synopsis</h2>
+<div id="outline-container-orgc00b2a1" class="outline-2">
+<h2 id="orgc00b2a1"><span class="section-number-2">1.</span> Synopsis</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 I serve on the teaching committee as the freshman undergraduate advisor (&#x202e;חבר ועדת הוראה ויועץ לתואר ראשון&#x202c;) at the <a href="//www.cs.bgu.ac.il/"><i>Department of Computer Science</i></a> at <a href="http://www.bgu.ac.il/"><i>Ben-Gurion University</i></a>. 
@@ -219,8 +219,8 @@ I serve on the teaching committee as the freshman undergraduate advisor (&#x202e
 </div>
 </div>
 
-<div id="outline-container-org3dea710" class="outline-2">
-<h2 id="org3dea710"><span class="section-number-2">2.</span> How to contact me</h2>
+<div id="outline-container-org4c1f143" class="outline-2">
+<h2 id="org4c1f143"><span class="section-number-2">2.</span> How to contact me</h2>
 <div class="outline-text-2" id="text-2">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -247,8 +247,13 @@ I serve on the teaching committee as the freshman undergraduate advisor (&#x202e
 </tr>
 
 <tr>
-<td class="org-left">Office hours (fall)</td>
-<td class="org-left">Mondays, 17:00&#x2013;19:00</td>
+<td class="org-left">Office hours</td>
+<td class="org-left">Mondays, 14:00&#x2013;16:00</td>
+</tr>
+
+<tr>
+<td class="org-left">Zoom link</td>
+<td class="org-left"><a href="https://us02web.zoom.us/j/86309317409?pwd=jHoMQ3Ec3xE35eLLPF5tuagZl7Swsm.1">Appointments are by Zoom only!</a></td>
 </tr>
 
 <tr>
@@ -260,13 +265,21 @@ I serve on the teaching committee as the freshman undergraduate advisor (&#x202e
 </div>
 </div>
 
-<div id="outline-container-org808376a" class="outline-2">
-<h2 id="org808376a"><span class="section-number-2">3.</span> General guidelines</h2>
+<div id="outline-container-org8df6768" class="outline-2">
+<h2 id="org8df6768"><span class="section-number-2">3.</span> General guidelines</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Please understand that:
 </p>
 <ul class="org-ul">
+<li>I am in charge of the <b>Freshman-class only</b> (&#x202e;שנה א'&#x202c;), and only two programs: <b>Computer Science</b> (&#x202e;התוכנית החד־חוגית במדעי המחשב&#x202c;), and <b>Software Engineering</b> (&#x202e;התוכנית להנדסת תוכנה&#x202c;):
+<ul class="org-ul">
+<li>Students in the <b>bioinformatics</b> (&#x202e;ביואינפורמטיקה&#x202c;) program should contact <a href="https://www.cs.bgu.ac.il/~keasar/">Prof Chen Keasar</a></li>
+<li>Sophomores, Juniors, and Seniors (&#x202e;שנים ב' והלאה&#x202c;) should contact <a href="https://www.cs.bgu.ac.il/~neimano/">Prof Ofer Neimann</a></li>
+<li>Students of other programs: double-major, dual programs, etc, should contact <a href="https://www.cs.bgu.ac.il/~asharf/">Prof Andrei Sharf</a></li>
+<li>Reservists (&#x202e;משרתי המילואים&#x202c;), and students who were affected by the current war (&#x202e;ניצולים&#x202c;), should contact <a href="https://omriazencot.com/">Dr Omri Azencot</a></li>
+</ul></li>
+<li>All appointments are by <a href="https://us02web.zoom.us/j/86309317409?pwd=jHoMQ3Ec3xE35eLLPF5tuagZl7Swsm.1">Zoom</a> only!</li>
 <li>No decisions are made &ldquo;on the spot&rdquo;, regardless of what you tell me</li>
 <li>All decisions are taken offline, after deliberation with other members of the department and the relevant faculty (either Natural Sciences of Engineering, depending on what program you are in), with all relevant documentation at hand, and in particular, with your academic transcript before us</li>
 <li>You are welcome to come to my office hours, or to send me an email, but please keep in mind that on most academic matters, I shall probably direct you to the <a href="https://cs-sr.cs.bgu.ac.il/"><i>Student Request Form</i> (&#x202e;מערכת פניות הסטודנטים&#x202c;)</a></li>
@@ -274,8 +287,8 @@ Please understand that:
 </div>
 </div>
 
-<div id="outline-container-org90ecf2a" class="outline-2">
-<h2 id="org90ecf2a"><span class="section-number-2">4.</span> Issues that come up frequently</h2>
+<div id="outline-container-orgcdf8f41" class="outline-2">
+<h2 id="orgcdf8f41"><span class="section-number-2">4.</span> Issues that come up frequently</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>If you <b>seek authorization for a course</b>, or <b>&#x202e;מועד מיוחד&#x202c; in a course you took</b>, please go to the <a href="https://cs-sr.cs.bgu.ac.il/">Student Request Form (&#x202e;מערכת פניות הסטודנטים&#x202c;)</a>, and fill and submit the appropriate form. You should support &amp; substantiate any claims you make with appropriate documentation, and include those with your form. There is no need to speak with me in advance.</li>
@@ -312,7 +325,7 @@ For all other matters, please fill in the <a href="https://cs-sr.cs.bgu.ac.il/">
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg</p>
-<p class="date">Created: 2025-08-12 Tue 09:09</p>
+<p class="date">Created: 2025-10-15 Wed 14:10</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
