--- a/tc.html
+++ b/tc.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-10-15 Wed 15:53 -->
+<!-- 2025-10-18 Sat 19:53 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Teaching Committee</title>
@@ -202,16 +202,16 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgf91c3b6">1. Synopsis</a></li>
-<li><a href="#org6eb358e">2. How to contact me</a></li>
-<li><a href="#org73d2da0">3. General guidelines</a></li>
-<li><a href="#org9cfe7b0">4. Issues that come up frequently</a></li>
+<li><a href="#org5a1f2d2">1. Synopsis</a></li>
+<li><a href="#org7db19e7">2. How to contact me</a></li>
+<li><a href="#org411cd89">3. General guidelines</a></li>
+<li><a href="#org893d863">4. Issues that come up frequently</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgf91c3b6" class="outline-2">
-<h2 id="orgf91c3b6"><span class="section-number-2">1.</span> Synopsis</h2>
+<div id="outline-container-org5a1f2d2" class="outline-2">
+<h2 id="org5a1f2d2"><span class="section-number-2">1.</span> Synopsis</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 I serve on the teaching committee as the freshman undergraduate advisor (&#x202e;חבר ועדת הוראה ויועץ לימודים לתואר ראשון, שנה א'&#x202c;) at the <a href="//www.cs.bgu.ac.il/"><i>Department of Computer Science</i></a> at <a href="http://www.bgu.ac.il/"><i>Ben-Gurion University</i></a>. 
@@ -219,8 +219,8 @@ I serve on the teaching committee as the freshman undergraduate advisor (&#x202e
 </div>
 </div>
 
-<div id="outline-container-org6eb358e" class="outline-2">
-<h2 id="org6eb358e"><span class="section-number-2">2.</span> How to contact me</h2>
+<div id="outline-container-org7db19e7" class="outline-2">
+<h2 id="org7db19e7"><span class="section-number-2">2.</span> How to contact me</h2>
 <div class="outline-text-2" id="text-2">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -248,7 +248,7 @@ I serve on the teaching committee as the freshman undergraduate advisor (&#x202e
 
 <tr>
 <td class="org-left">Office hours</td>
-<td class="org-left">Mondays, 14:00&#x2013;16:00</td>
+<td class="org-left">Mondays, 14:00&#x2013;16:00 <b>(beginning October 27)</b></td>
 </tr>
 
 <tr>
@@ -265,8 +265,8 @@ I serve on the teaching committee as the freshman undergraduate advisor (&#x202e
 </div>
 </div>
 
-<div id="outline-container-org73d2da0" class="outline-2">
-<h2 id="org73d2da0"><span class="section-number-2">3.</span> General guidelines</h2>
+<div id="outline-container-org411cd89" class="outline-2">
+<h2 id="org411cd89"><span class="section-number-2">3.</span> General guidelines</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Please understand that:
@@ -287,8 +287,8 @@ Please understand that:
 </div>
 </div>
 
-<div id="outline-container-org9cfe7b0" class="outline-2">
-<h2 id="org9cfe7b0"><span class="section-number-2">4.</span> Issues that come up frequently</h2>
+<div id="outline-container-org893d863" class="outline-2">
+<h2 id="org893d863"><span class="section-number-2">4.</span> Issues that come up frequently</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>If you <b>seek authorization for a course</b>, or <b>&#x202e;מועד מיוחד&#x202c; in a course you took</b>, please go to the <a href="https://cs-sr.cs.bgu.ac.il/">Student Request Form (&#x202e;מערכת פניות הסטודנטים&#x202c;)</a>, and fill and submit the appropriate form. You should support &amp; substantiate any claims you make with appropriate documentation, and include those with your form. There is no need to speak with me in advance.</li>
@@ -325,7 +325,7 @@ For all other matters, please fill in the <a href="https://cs-sr.cs.bgu.ac.il/">
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (&#x202e;מֵאִיר גּוֹלְדְּבֵּרְג&#x202c;)</p>
-<p class="date">Created: 2025-10-15 Wed 15:53</p>
+<p class="date">Created: 2025-10-18 Sat 19:53</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
