--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-10-15 Wed 16:38 -->
+<!-- 2025-10-19 Sun 12:47 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Mayer Goldberg's Homepage (@@html:&amp;#x202e;@@מֵאִיר גּוֹלְדְּבֵּרְג@@html:&amp;#x202c;@@)</title>
@@ -202,16 +202,16 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgd1bb079">1. Contact Information</a></li>
-<li><a href="#org173afc5">2. Research</a>
+<li><a href="#orga69d197">1. Contact Information</a></li>
+<li><a href="#org3112617">2. Research</a>
 <ul>
-<li><a href="#org0b9b167">2.1. Research Interests</a></li>
+<li><a href="#org7a6e67e">2.1. Research Interests</a></li>
 </ul>
 </li>
-<li><a href="#org83f5633">3. Teaching</a></li>
-<li><a href="#orgdc1e04e">4. Departmental duties</a></li>
-<li><a href="#orgb1c4e2f">5. Personal interests</a></li>
-<li><a href="#orgd4f074f">6. <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></a></li>
+<li><a href="#org0feaa81">3. Teaching</a></li>
+<li><a href="#org2d0bd8b">4. Departmental duties</a></li>
+<li><a href="#org18520c9">5. Personal interests</a></li>
+<li><a href="#org8a2a83e">6. <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></a></li>
 </ul>
 </div>
 </div>
@@ -228,8 +228,8 @@ regardless of whether or not it made money for anybody?
 </p>
 </blockquote>
 
-<div id="outline-container-orgd1bb079" class="outline-2">
-<h2 id="orgd1bb079"><span class="section-number-2">1.</span> Contact Information</h2>
+<div id="outline-container-orga69d197" class="outline-2">
+<h2 id="orga69d197"><span class="section-number-2">1.</span> Contact Information</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><b>Email:</b> <a href="mailto:gmayer@little-lisper.org">gmayer@little-lisper.org</a>. All email, from all other accounts,
@@ -247,12 +247,12 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-org173afc5" class="outline-2">
-<h2 id="org173afc5"><span class="section-number-2">2.</span> Research</h2>
+<div id="outline-container-org3112617" class="outline-2">
+<h2 id="org3112617"><span class="section-number-2">2.</span> Research</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org0b9b167" class="outline-3">
-<h3 id="org0b9b167"><span class="section-number-3">2.1.</span> Research Interests</h3>
+<div id="outline-container-org7a6e67e" class="outline-3">
+<h3 id="org7a6e67e"><span class="section-number-3">2.1.</span> Research Interests</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li>The Lambda Calculus &amp; Combinatory Logic</li>
@@ -271,8 +271,8 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-org83f5633" class="outline-2">
-<h2 id="org83f5633"><span class="section-number-2">3.</span> Teaching</h2>
+<div id="outline-container-org0feaa81" class="outline-2">
+<h2 id="org0feaa81"><span class="section-number-2">3.</span> Teaching</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><i>Introduction to Compiler Construction</i>, Fall 2025</li>
@@ -280,16 +280,16 @@ Israel.</li>
 </div>
 </div>
 
-<div id="outline-container-orgdc1e04e" class="outline-2">
-<h2 id="orgdc1e04e"><span class="section-number-2">4.</span> Departmental duties</h2>
+<div id="outline-container-org2d0bd8b" class="outline-2">
+<h2 id="org2d0bd8b"><span class="section-number-2">4.</span> Departmental duties</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="./tc.html"><i>The Unergraduate Teaching Committee</i></a> for the freshman year (&#x202e;ועדת הוראה, שנה א'&#x202c;)</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgb1c4e2f" class="outline-2">
-<h2 id="orgb1c4e2f"><span class="section-number-2">5.</span> Personal interests</h2>
+<div id="outline-container-org18520c9" class="outline-2">
+<h2 id="org18520c9"><span class="section-number-2">5.</span> Personal interests</h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="./languages.html">Learning languages</a></li>
@@ -298,8 +298,8 @@ Israel.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgd4f074f" class="outline-2">
-<h2 id="orgd4f074f"><span class="section-number-2">6.</span> <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></h2>
+<div id="outline-container-org8a2a83e" class="outline-2">
+<h2 id="org8a2a83e"><span class="section-number-2">6.</span> <i>This website has a seriously drab look, that was outdated already back in the 1990's&#x2026;!</i></h2>
 <div class="outline-text-2" id="text-6">
 <ul class="org-ul">
 <li>While the look <i>is</i> drab, mainly because I know very little about graphical design</li>
@@ -316,7 +316,7 @@ So please give the website a second look&#x2026; &#9786;
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (&#x202e;מֵאִיר גּוֹלְדְּבֵּרְג&#x202c;)</p>
-<p class="date">Created: 2025-10-15 Wed 16:38</p>
+<p class="date">Created: 2025-10-19 Sun 12:47</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
